<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/OuterVerticalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/Layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="text"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonBackspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onDelete"
                android:textColor="@color/red"
                android:textSize="30sp"
                android:text="@string/Backspace"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonOne"
                android:text="@string/one"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonTwo"
                android:text="@string/two"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonThree"
                android:text="@string/three"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonFour"
                android:text="@string/four"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonFive"
                android:text="@string/five"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonSix"
                android:text="@string/six"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonSeven"
                android:text="@string/seven"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonEight"
                android:text="@string/eight"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonNine"
                android:text="@string/nine"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonStar"
                android:text="@string/star"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonZero"
                android:text="@string/zero"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonHashTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonHashTag"
                android:text="@string/hashTag"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_secondary"
                android:onClick="onButtonCall"
                android:text="@string/Call"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>